objects/ASI_MFM_PP_Category_A_C__c.object
<CustomObject>
    <description>Relationship between PP Category and A/C</description>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>PP Category A/Cs</relationshipLabel>
        <relationshipName>PP_Category_A_Cs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Name__c</fullName>
        <formula>ASI_MFM_A_C_Code__r.ASI_MFM_A_C_Description__c</formula>
        <label>A/C Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_PP_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PP Category</label>
        <referenceTo>ASI_MFM_PP_Category__c</referenceTo>
        <relationshipLabel>PP Category A/Cs</relationshipLabel>
        <relationshipName>PP_Category_A_Cs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PP Category A/C</label>
    <nameField>
        <displayFormat>PPAC{0000}</displayFormat>
        <label>PP Category A/C Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PP Category A/Cs</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_PP_Category_A_C</fullName>
        <active>true</active>
        <label>PP Category A/C (CN)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>